# berry

./: .gitignore  .prettierrc.json  Cargo.toml  README.md  build.rs  index.js  lint-staged.config.ts  package.json  tsconfig.json
.github/workflows/: CI.yml
.husky/: pre-commit
benches/: README.md
benchmark/: README.md
crates/berry-bench/: Cargo.toml
crates/berry-bench-bin/: Cargo.toml
crates/berry-bench-bin/src/: main.rs
crates/berry-bench/benches/: parser_benchmarks.rs
crates/berry-core/: Cargo.toml
crates/berry-core/src/: ident.rs  lib.rs  locator.rs  lockfile.rs  metadata.rs  package.rs  parse.rs
crates/berry-dump-bin/: Cargo.toml  README.md
crates/berry-dump-bin/src/: main.rs
crates/berry-test/: Cargo.toml
crates/berry-test/src/: lib.rs
crates/node-bindings/: .prettierignore  Cargo.toml  index.d.ts  index.js  package.json  tsconfig.json
crates/node-bindings/__test__/: index.spec.ts  tsconfig.json
crates/node-bindings/benches/: README.md
crates/node-bindings/examples/: simple.rs
crates/node-bindings/src/: ident.rs  lib.rs  lockfile.rs  metadata.rs  parse.rs
debug_parse/src/: main.rs
dev-docs/: BENCHMARKING.md  CONTRIBUTING.md  CORE_PARSER.md  TODO.md
development/: TODO.md
examples/: README.md  simple.rs
fixtures/: README.md
npm/android-arm-eabi/: README.md  package.json
npm/android-arm64/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/freebsd-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: lib.rs  locator.rs  lockfile.rs  metadata.rs  package.rs  parse.rs
