[package]
authors = ["Shrey Somaiya"]
edition = "2024"
name    = "berry"
version = "0.1.0"
repository = "https://github.com/spanishpear/berry"
description = "A simple yarn berry lockfile parser"
license = "MIT OR Apache-2.0"
keywords = ["yarn", "berry", "lockfile", "parser", "utils", "nodejs", "napi", "n-api"]
categories = ["parsing", "parser-implementations"]

# https://doc.rust-lang.org/rustc/lints/groups.html
[lints.rust]
warnings = "warn"
deprecated-safe = "warn"
future-incompatible = "warn"
keyword-idents = "warn"
let-underscore = "warn"
nonstandard-style = "warn"
refining-impl-trait = "warn"
rust-2024-compatibility = "warn"
unused = "warn"

# https://github.com/rust-lang/rust-clippy/?tab=readme-ov-file#clippy
[lints.clippy]
# set all the lints to warn - will fail in CI
# Other categories are default warn, so are not listed
all = { level = "warn", priority = -1 } # default is "warn/deny", as it contains multiple groups
cargo = { level = "warn", priority = -1 } # default is "allow"
nursery = { level = "warn", priority = -1 } # default is "allow"
pedantic = { level = "warn", priority = -1 } # default is "allow"
# Now, allow ones we want to ignore
implicit_return = "allow" # Prefer idiomatic rust
must_use_candidate = "allow"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi        = "2"
napi-derive = "2"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
codegen-units = 1
