
[workspace]
members  = ["crates/*"]
resolver = "2"

  [workspace.package]
  authors    = ["Shrey Somaiya"]
  categories = ["parsing", "parser-implementations"]
  # description = "A simple yarn berry lockfile parser"
  edition = "2024"
  # keywords = [
  #   "yarn",
  #   "berry",
  #   "lockfile",
  #   "parser",
  #   "utils",
  #   "nodejs",
  #   "napi",
  #   "n-api",
  # ]
  license = "MIT OR Apache-2.0"
  # name = "berry"
  repository = "https://github.com/spanishpear/berry"
  # version = "0.1.0"

  # https://doc.rust-lang.org/rustc/lints/groups.html
  [workspace.lints.rust]
  deprecated-safe         = "warn"
  future-incompatible     = "warn"
  keyword-idents          = "warn"
  let-underscore          = "warn"
  nonstandard-style       = "warn"
  refining-impl-trait     = "warn"
  rust-2024-compatibility = "warn"
  unused                  = "warn"
  warnings                = "warn"

  # https://github.com/rust-lang/rust-clippy/?tab=readme-ov-file#clippy
  [workspace.lints.clippy]
  # set all the lints to warn - will fail in CI
  # Other categories are default warn, so are not listed
  all      = { level = "warn", priority = -1 } # default is "warn/deny", as it contains multiple groups
  cargo    = { level = "warn", priority = -1 } # default is "allow"
  nursery  = { level = "warn", priority = -1 } # default is "allow"
  pedantic = { level = "warn", priority = -1 } # default is "allow"
  # Now, allow ones we want to ignore
  cargo_common_metadata = "allow"
  implicit_return       = "allow" # Prefer idiomatic rust
  missing_errors_doc    = "allow"
  must_use_candidate    = "allow"

  [workspace.dependencies]
  # https://nodejs.org/api/n-api.html#node-api-version-matrix
  # support node 18-22
  napi = { version = "3.0.0-alpha", default-features = false, features = [
    "napi9",
  ] }
  napi-derive = { version = "3.0.0-alpha", default-features = false, features = [
    "type-def",
  ] }
  nom = "8.0.0"

[profile.release]
codegen-units = 1
lto           = true
strip         = "symbols"
