[package]
authors.workspace    = true
edition.workspace    = true
license.workspace    = true
name                 = "berry-bench-bin"
repository.workspace = true
version.workspace    = true

[dependencies]
berry-core   = { workspace = true }
berry-test   = { workspace = true }
clap         = { workspace = true }
memory-stats = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }

[lints]
workspace = true
