[package]
authors.workspace    = true
edition.workspace    = true
license.workspace    = true
name                 = "berry-bench"
repository.workspace = true
version.workspace    = true

[dependencies]
berry-core   = { workspace = true }
berry-test   = { workspace = true }
criterion    = { workspace = true }
memory-stats = { workspace = true }

[[bench]]
harness = false
name    = "parser_benchmarks"

[dev-dependencies]
criterion = { workspace = true }
