[package]
authors.workspace    = true
edition.workspace    = true
license.workspace    = true
name                 = "berry-test"
repository.workspace = true
version.workspace    = true

[dependencies]
berry-core = { workspace = true }
rstest     = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }

[lints]
workspace = true
